kubernetes/ns-devops/jenkins/01-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: devops
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-ci
  template:
    metadata:
      labels:
        app: jenkins-ci
    spec:
      containers:
      - name: jenkins-app
        image: jenkinsci/blueocean:1.17.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "4Gi"
            cpu: "1000m"
          requests:
            memory: "2Gi"
            cpu: "500m"
        volumeMounts:
        - mountPath: "/var/jenkins_home"
          name: jenkins-storage
      volumes:
      - name: jenkins-storage
        persistentVolumeClaim:
          claimName: jenkins-storage-claim
