kubernetes/ns-devops/jenkins/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: devops
spec:
  selector:
    app: jenkins-ci
  ports:
  - name: web-ui
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: worker-connect
    protocol: TCP
    port: 50000
    targetPort: 50000
  type: NodePort
